--- a/Api/project.json
+++ b/Api/project.json
@@ -21,13 +21,9 @@
     },
 
     "exclude": [
-    "wwwroot",
-    "node_modules",
-    "bower_components"
+    "wwwroot"
   ],
     "publishExclude": [
-    "node_modules",
-    "bower_components",
     "**.xproj",
     "**.user",
     "**.vspscc"
